--- a/mapping/monikerMapping.json
+++ b/mapping/monikerMapping.json
@@ -2,28 +2,28 @@
     "azurermps-6.6.0": {
         "serviceMap": "mapping/rm-groupMapping-6.6.0.json",
         "packageRoot": "azurermps-6.6.0",
-        "conceptualToc":"docs-conceptual/azurermps-6.6.0/toc.yml",
+        "conceptualToc":"docs-conceptual/azurermps-latest/toc.yml",
         "conceptualTocUrl": "/powershell/azure/toc.json",
         "referenceTocUrl": "/powershell/module/toc.json"
     },
         "azurermps-5.7.0": {
         "serviceMap": "mapping/rm-groupMapping-5.7.0.json",
         "packageRoot": "azurermps-5.7.0",
-        "conceptualToc":"docs-conceptual/azurermps-5.7.0/toc.yml",
+        "conceptualToc":"docs-conceptual/azurermps-latest/toc.yml",
         "conceptualTocUrl": "/powershell/azure/toc.json",
         "referenceTocUrl": "/powershell/module/toc.json"
     },
     "azurermps-4.4.1": {
         "serviceMap": "mapping/rm-groupMapping-4.4.1.json",
         "packageRoot": "azurermps-4.4.1",
-        "conceptualToc":"docs-conceptual/azurermps-4.4.1/toc.yml",
+        "conceptualToc":"docs-conceptual/azurermps-latest/toc.yml",
         "conceptualTocUrl": "/powershell/azure/toc.json",
         "referenceTocUrl": "/powershell/module/toc.json"
     },
     "azurermps-1.2.9": {
         "serviceMap": "mapping/rm-groupMapping-1.2.9.json",
         "packageRoot": "azurermps-1.2.9",
-        "conceptualToc":"docs-conceptual/azurermps-1.2.9/toc.yml",
+        "conceptualToc":"docs-conceptual/azurermps-latest/toc.yml",
         "conceptualTocUrl": "/powershell/azure/toc.json",
         "referenceTocUrl": "/powershell/module/toc.json"
     },
